--- a/charts/miggo/templates/miggo-collector/serviceaccount.yaml
+++ b/charts/miggo/templates/miggo-collector/serviceaccount.yaml
@@ -1,8 +1,8 @@
-{{ if .Values.collector.enabled }}
+{{ if .Values.miggoCollector.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "k8s-integrations.serviceAccountName" . }}-collector
+  name: {{ include "miggo.serviceAccountName" . }}-collector
   labels:
     {{- include "miggo-collector.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
