--- a/charts/miggo/templates/miggo-watch/serviceaccount.yaml
+++ b/charts/miggo/templates/miggo-watch/serviceaccount.yaml
@@ -1,10 +1,10 @@
-{{ if .Values.k8sRead.enabled }}
+{{ if .Values.miggoWatch.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "k8s-integrations.serviceAccountName" . }}-k8s-read
+  name: {{ include "miggo.serviceAccountName" . }}-watch
   labels:
-    {{- include "k8s-integrations.labels" . | nindent 4 }}
+    {{- include "miggo.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
