--- a/charts/miggo/tests/disable-all/values.yaml
+++ b/charts/miggo/tests/disable-all/values.yaml
@@ -1,10 +1,10 @@
-k8sRead:
+miggoWatch:
   enabled: false
 
-staticSbom:
+miggoScanner:
   enabled: false
 
-sensor:
+miggoRuntime:
   enabled: false
 
 collector:
