--- a/charts/miggo/tests/simple/test.yaml
+++ b/charts/miggo/tests/simple/test.yaml
@@ -7,7 +7,7 @@ release:
 templates:
   - templates/miggo-watch/deployment.yaml
   - templates/miggo-scanner/deployment.yaml
-  - templates/sensor/daemonset.yaml
+  - templates/miggo-runtime/daemonset.yaml
   - templates/collector/deployment.yaml
   - templates/collector/collector-config-cm.yaml
   - templates/image-pull-secret.yaml
@@ -89,7 +89,7 @@ tests:
           value: IfNotPresent
 
   - it: sensor daemonset
-    template: templates/sensor/daemonset.yaml
+    template: templates/miggo-runtime/daemonset.yaml
     asserts:
       - isKind:
           of: DaemonSet
@@ -100,12 +100,12 @@ tests:
           path: spec.template.spec.serviceAccountName
           value: miggo-sensor
       - matchRegex:
-          path: spec.template.spec.containers[?(@.name == "miggo-sensor")].image
+          path: spec.template.spec.containers[?(@.name == "miggo-runtime")].image
           pattern: registry.miggo.io/miggoprod/miggo-runtime:.*
       - contains:
           path: spec.template.spec.imagePullSecrets
           content:
             name: miggo-regcred
       - equal:
-          path: spec.template.spec.containers[?(@.name == "miggo-sensor")].imagePullPolicy
+          path: spec.template.spec.containers[?(@.name == "miggo-runtime")].imagePullPolicy
           value: IfNotPresent
