--- a/charts/miggo/templates/miggo-collector/role.yaml
+++ b/charts/miggo/templates/miggo-collector/role.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.collector.enabled }}
+{{ if .Values.miggoCollector.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
