--- a/charts/miggo/templates/miggo-runtime/daemonset.yaml
+++ b/charts/miggo/templates/miggo-runtime/daemonset.yaml
@@ -1,43 +1,43 @@
-{{ if .Values.sensor.enabled }}
+{{ if .Values.miggoRuntime.enabled }}
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: {{ include "k8s-integrations.fullname" . }}-sensor
+  name: {{ include "miggo.fullname" . }}-runtime
   labels:
-    {{- include "k8s-integrations.labels" . | nindent 4 }}
+    {{- include "miggo.labels" . | nindent 4 }}
     {{- with .Values.labels }}
     {{- tpl (toYaml .) $ | nindent 4 }}
     {{- end }}
-    {{- with .Values.sensor.labels }}
+    {{- with .Values.miggoRuntime.labels }}
     {{- tpl (toYaml .) $ | nindent 4 }}
     {{- end }}
   annotations:
   {{- with .Values.annotations }}
     {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with .Values.sensor.annotations }}
+  {{- with .Values.miggoRuntime.annotations }}
     {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
 spec:
   selector:
     matchLabels:
-    {{- include "sensor.selectorLabels" . | nindent 6 }}
+    {{- include "miggoRuntime.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       annotations:
       {{- with .Values.podAnnotations }}
         {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
-      {{- with .Values.sensor.podAnnotations }}
+      {{- with .Values.miggoRuntime.podAnnotations }}
         {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       labels:
-        component: sensor
-        {{- include "sensor.labels" . | nindent 8 }}
+        component: miggo-runtime
+        {{- include "miggoRuntime.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
-        {{- with .Values.sensor.podLabels }}
+        {{- with .Values.miggoRuntime.podLabels }}
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
     spec:
@@ -46,19 +46,19 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- include "miggoImagePullSecrets" . | nindent 8 }}
-      serviceAccountName: {{ include "k8s-integrations.serviceAccountName" . }}-sensor
+      serviceAccountName: {{ include "miggo.serviceAccountName" . }}-runtime
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: miggo-sensor
+        - name: miggo-runtime
           securityContext:
             privileged: true
-          {{- if .Values.sensor.image.fullPath }}
-          image: "{{ .Values.sensor.image.fullPath }}"
+          {{- if .Values.miggoRuntime.image.fullPath }}
+          image: "{{ .Values.miggoRuntime.image.fullPath }}"
           {{- else }}
-          image: "{{ .Values.image.registry }}/{{ .Values.sensor.image.repository }}:{{ .Values.sensor.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.registry }}/{{ .Values.miggoRuntime.image.repository }}:{{ .Values.miggoRuntime.image.tag | default .Chart.AppVersion }}"
           {{- end }}
-          imagePullPolicy: {{ .Values.sensor.image.pullPolicy | default .Values.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.miggoRuntime.image.pullPolicy | default .Values.image.pullPolicy }}
           args:
             - --cluster-name={{ .Values.miggo.clusterName }}
             - --tenant-name={{ .Values.miggo.tenantId }}
@@ -71,12 +71,12 @@ spec:
             - --metric-otlp-endpoint={{ (include "otlpEndpoint" .) }}
             - --metric-tls-skip-verify={{ (include "otlpTlsSkipVerify" .) }}
             - --metric-interval={{ .Values.config.metrics.interval }}
-            - --disable-profiler={{ not .Values.sensor.profiler.enabled }}
+            - --disable-profiler={{ not .Values.miggoRuntime.profiler.enabled }}
           envFrom:
           {{- with .Values.extraEnvsFrom }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
-          {{- with .Values.sensor.extraEnvsFrom }}
+          {{- with .Values.miggoRuntime.extraEnvsFrom }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
           env:
@@ -89,7 +89,7 @@ spec:
           {{- with .Values.extraEnvs }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
-          {{- with .Values.sensor.extraEnvs }}
+          {{- with .Values.miggoRuntime.extraEnvs }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
           ports:
@@ -105,44 +105,44 @@ spec:
               port: {{ .Values.healthcheck.port }}
             periodSeconds: 10
           resources:
-            {{- toYaml .Values.sensor.resources | nindent 12 }}
+            {{- toYaml .Values.miggoRuntime.resources | nindent 12 }}
           volumeMounts:
           - name: debugfs
             mountPath: /sys/kernel/debug
             readOnly: true
-          {{- if .Values.sensor.profiler.enabled }}
+          {{- if .Values.miggoRuntime.profiler.enabled }}
           - name: unix-socket
             mountPath: /tmp/grpc
           {{- end }}
           {{- with .Values.volumeMounts }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
-          {{- with .Values.sensor.volumeMounts }}
+          {{- with .Values.miggoRuntime.volumeMounts }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
-        {{- if .Values.sensor.profiler.enabled }}
+        {{- if .Values.miggoRuntime.profiler.enabled }}
         - name: profiler
-          {{- if .Values.sensor.profiler.image.fullPath }}
-          image: "{{ .Values.sensor.profiler.image.fullPath }}"
+          {{- if .Values.miggoRuntime.profiler.image.fullPath }}
+          image: "{{ .Values.miggoRuntime.profiler.image.fullPath }}"
           {{- else }}
-          image: "{{ .Values.image.registry }}/{{ .Values.sensor.profiler.image.repository }}:{{ .Values.sensor.profiler.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.registry }}/{{ .Values.miggoRuntime.profiler.image.repository }}:{{ .Values.miggoRuntime.profiler.image.tag | default .Chart.AppVersion }}"
           {{- end }}
-          imagePullPolicy: {{ .Values.sensor.profiler.image.pullPolicy | default .Values.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.miggoRuntime.profiler.image.pullPolicy | default .Values.image.pullPolicy }}
           command:
             - /root/ebpf-profiler
           args:
             - -collection-agent={{ (include "otlpProfilesEndpoint" .) }}
             - -disable-tls=true
-            - -reporter-interval={{ .Values.sensor.profiler.reporterInterval }}
-            - -samples-per-second={{ .Values.sensor.profiler.samplesPerSecond }}
-            - -monitor-interval={{ .Values.sensor.profiler.monitorInterval }}
-            - -off-cpu-threshold={{ .Values.sensor.profiler.offCpuThreshold }}
-            - -probabilistic-threshold={{ .Values.sensor.profiler.probabilisticThreshold }}
-            - -probabilistic-interval={{ .Values.sensor.profiler.probabilisticInterval }}
+            - -reporter-interval={{ .Values.miggoRuntime.profiler.reporterInterval }}
+            - -samples-per-second={{ .Values.miggoRuntime.profiler.samplesPerSecond }}
+            - -monitor-interval={{ .Values.miggoRuntime.profiler.monitorInterval }}
+            - -off-cpu-threshold={{ .Values.miggoRuntime.profiler.offCpuThreshold }}
+            - -probabilistic-threshold={{ .Values.miggoRuntime.profiler.probabilisticThreshold }}
+            - -probabilistic-interval={{ .Values.miggoRuntime.profiler.probabilisticInterval }}
           resources:
-            {{- toYaml .Values.sensor.profiler.resources | nindent 12 }}
+            {{- toYaml .Values.miggoRuntime.profiler.resources | nindent 12 }}
           securityContext:
-            {{- toYaml .Values.sensor.profiler.securityContext | nindent 12 }}
+            {{- toYaml .Values.miggoRuntime.profiler.securityContext | nindent 12 }}
           volumeMounts:
             - name: debugfs
               mountPath: /sys/kernel/debug
@@ -153,13 +153,13 @@ spec:
             - name: unix-socket
               mountPath: /tmp/grpc
         {{- end }}
-      hostIPC: {{ .Values.sensor.hostIPC }}
-      hostPID: {{ .Values.sensor.hostPID }}
+      hostIPC: {{ .Values.miggoRuntime.hostIPC }}
+      hostPID: {{ .Values.miggoRuntime.hostPID }}
       volumes:
       - name: debugfs
         hostPath:
           path: /sys/kernel/debug
-      {{- if .Values.sensor.profiler.enabled }}
+      {{- if .Values.miggoRuntime.profiler.enabled }}
       - name: unix-socket
         emptyDir: { }
       - name: cgroupfs
@@ -169,14 +169,14 @@ spec:
       {{- with .Values.volumes }}
       {{- toYaml . | nindent 6 }}
       {{- end }}
-      {{- with .Values.sensor.volumes }}
+      {{- with .Values.miggoRuntime.volumes }}
       {{- toYaml . | nindent 6 }}
       {{- end }}
       nodeSelector:
       {{- with .Values.nodeSelector }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.sensor.nodeSelector }}
+      {{- with .Values.miggoRuntime.nodeSelector }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.affinity }}
