--- a/charts/miggo/templates/miggo-runtime/role.yaml
+++ b/charts/miggo/templates/miggo-runtime/role.yaml
@@ -1,10 +1,10 @@
-{{ if .Values.sensor.enabled }}
+{{ if .Values.miggoRuntime.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "k8s-integrations.fullname" . }}-pod-watcher-cr
+  name: {{ include "miggo.fullname" . }}-pod-watcher-cr
   labels:
-  {{- include "k8s-integrations.labels" . | nindent 4 }}
+  {{- include "miggo.labels" . | nindent 4 }}
 rules:
 - apiGroups:
   - ""
