--- a/charts/miggo/templates/miggo-runtime/rolebinding.yaml
+++ b/charts/miggo/templates/miggo-runtime/rolebinding.yaml
@@ -1,16 +1,16 @@
-{{ if .Values.sensor.enabled }}
+{{ if .Values.miggoRuntime.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "k8s-integrations.fullname" . }}-pod-watcher-crb
+  name: {{ include "miggo.fullname" . }}-pod-watcher-crb
   labels:
-  {{- include "k8s-integrations.labels" . | nindent 4 }}
+  {{- include "miggo.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ include "k8s-integrations.fullname" . }}-pod-watcher-cr
+  name: {{ include "miggo.fullname" . }}-pod-watcher-cr
 subjects:
 - kind: ServiceAccount
-  name: {{ include "k8s-integrations.fullname" . }}-sensor
+  name: {{ include "miggo.fullname" . }}-runtime
   namespace: '{{ .Release.Namespace }}'
 {{ end }}
