--- a/charts/miggo/templates/miggo-runtime/serviceaccount.yaml
+++ b/charts/miggo/templates/miggo-runtime/serviceaccount.yaml
@@ -1,10 +1,10 @@
-{{ if .Values.sensor.enabled }}
+{{ if .Values.miggoRuntime.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "k8s-integrations.fullname" . }}-sensor
+  name: {{ include "miggo.fullname" . }}-runtime
   labels:
-    {{- include "k8s-integrations.labels" . | nindent 4 }}
+    {{- include "miggo.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
