--- a/charts/miggo/templates/miggo-scanner/deployment.yaml
+++ b/charts/miggo/templates/miggo-scanner/deployment.yaml
@@ -1,44 +1,44 @@
-{{ if .Values.staticSbom.enabled }}
+{{ if .Values.miggoScanner.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "k8s-integrations.fullname" . }}-static-sbom
+  name: {{ include "miggo.fullname" . }}-scanner
   labels:
-    {{- include "k8s-integrations.labels" . | nindent 4 }}
+    {{- include "miggo.labels" . | nindent 4 }}
     {{- with .Values.labels }}
     {{- tpl (toYaml .) $ | nindent 4 }}
     {{- end }}
-    {{- with .Values.staticSbom.labels }}
+    {{- with .Values.miggoScanner.labels }}
     {{- tpl (toYaml .) $ | nindent 4 }}
     {{- end }}
   annotations:
   {{- with .Values.annotations }}
     {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
-  {{- with .Values.staticSbom.annotations }}
+  {{- with .Values.miggoScanner.annotations }}
     {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      {{- include "static-sbom.selectorLabels" . | nindent 6 }}
+      {{- include "miggo-scanner.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       annotations:
         {{- with .Values.podAnnotations }}
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
-        {{- with .Values.staticSbom.podAnnotations }}
+        {{- with .Values.miggoScanner.podAnnotations }}
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
       labels:
-        component: static-sbom
-        {{- include "static-sbom.labels" . | nindent 8 }}
+        component: miggo-scanner
+        {{- include "miggo-scanner.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
-        {{- with .Values.staticSbom.podLabels }}
+        {{- with .Values.miggoScanner.podLabels }}
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
     spec:
@@ -47,19 +47,19 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- include "miggoImagePullSecrets" . | nindent 8 }}
-      serviceAccountName: {{ include "k8s-integrations.serviceAccountName" . }}-static-sbom
+      serviceAccountName: {{ include "miggo.serviceAccountName" . }}-scanner
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: static-sbom
+        - name: miggo-scanner
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          {{- if .Values.staticSbom.image.fullPath }}
-          image: "{{ .Values.staticSbom.image.fullPath }}"
+          {{- if .Values.miggoScanner.image.fullPath }}
+          image: "{{ .Values.miggoScanner.image.fullPath }}"
           {{- else }}
-          image: "{{ .Values.image.registry }}/{{ .Values.staticSbom.image.repository }}:{{ .Values.staticSbom.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.registry }}/{{ .Values.miggoScanner.image.repository }}:{{ .Values.miggoScanner.image.tag | default .Chart.AppVersion }}"
           {{- end }}
-          imagePullPolicy: {{ .Values.staticSbom.image.pullPolicy | default .Values.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.miggoScanner.image.pullPolicy | default .Values.image.pullPolicy }}
           args:
             - --cluster-name={{ .Values.miggo.clusterName }}
             - --tenant-name={{ .Values.miggo.tenantId }}
@@ -72,14 +72,14 @@ spec:
             - --metric-otlp-endpoint={{ (include "otlpEndpoint" .) }}
             - --metric-tls-skip-verify={{ (include "otlpTlsSkipVerify" .) }}
             - --metric-interval={{ .Values.config.metrics.interval }}
-            - --queue-size={{ .Values.staticSbom.config.queueSize }}
-            {{ if .Values.staticSbom.config.disableCompression }}
+            - --queue-size={{ .Values.miggoScanner.config.queueSize }}
+            {{ if .Values.miggoScanner.config.disableCompression }}
             - --disable-compression
             {{ end }}
-            - --cache-flush-interval={{ .Values.staticSbom.config.cache.flushInterval }}
-            - --cache-size={{ .Values.staticSbom.config.cache.maxEntries }}
-            {{ if .Values.staticSbom.config.cache.configMap.enabled }}
-            - --cache-cm-name={{ include "static-sbom.configMapCacheName" . }}
+            - --cache-flush-interval={{ .Values.miggoScanner.config.cache.flushInterval }}
+            - --cache-size={{ .Values.miggoScanner.config.cache.maxEntries }}
+            {{ if .Values.miggoScanner.config.cache.configMap.enabled }}
+            - --cache-cm-name={{ include "miggo-scanner.configMapCacheName" . }}
             - --cache-cm-namespace={{ .Release.Namespace }}
             {{ end }}
             {{- include "namespace.flags" . | nindent 12 }}
@@ -87,18 +87,18 @@ spec:
           {{- with .Values.extraEnvsFrom }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
-          {{- with .Values.staticSbom.extraEnvsFrom }}
+          {{- with .Values.miggoScanner.extraEnvsFrom }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
           env:
-          {{- if and (.Values.staticSbom.useGOMEMLIMIT) ((((.Values.staticSbom.resources).limits).memory))  }}
+          {{- if and (.Values.miggoScanner.useGOMEMLIMIT) ((((.Values.miggoScanner.resources).limits).memory))  }}
             - name: GOMEMLIMIT
-              value: {{ include "gomemlimit" .Values.staticSbom.resources.limits.memory | quote }}
+              value: {{ include "gomemlimit" .Values.miggoScanner.resources.limits.memory | quote }}
           {{- end }}
           {{- with .Values.extraEnvs }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- with .Values.staticSbom.extraEnvs }}
+          {{- with .Values.miggoScanner.extraEnvs }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
@@ -114,19 +114,19 @@ spec:
               port: {{ .Values.healthcheck.port }}
             periodSeconds: 10
           resources:
-            {{- toYaml .Values.staticSbom.resources | nindent 12 }}
+            {{- toYaml .Values.miggoScanner.resources | nindent 12 }}
           volumeMounts:
           {{- with .Values.volumeMounts }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
-          {{- with .Values.staticSbom.volumeMounts }}
+          {{- with .Values.miggoScanner.volumeMounts }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
       volumes:
       {{- with .Values.volumes }}
       {{- toYaml . | nindent 6 }}
       {{- end }}
-      {{- with .Values.staticSbom.volumes }}
+      {{- with .Values.miggoScanner.volumes }}
       {{- toYaml . | nindent 6 }}
       {{- end }}
       {{- with .Values.nodeSelector }}
