--- a/charts/miggo/templates/miggo-scanner/role.yaml
+++ b/charts/miggo/templates/miggo-scanner/role.yaml
@@ -1,8 +1,8 @@
-{{ if .Values.staticSbom.enabled }}
+{{ if .Values.miggoScanner.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: static-sbom-cluster-role
+  name: miggo-scanner-cluster-role
 rules:
 - apiGroups: [""]
   resources: ["pods", "nodes"]
@@ -25,7 +25,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: static-sbom-role
+  name: miggo-scanner-role
 rules:
 - apiGroups: [""]
   resources: ["configmaps"]
