--- a/charts/miggo/templates/miggo-scanner/serviceaccount.yaml
+++ b/charts/miggo/templates/miggo-scanner/serviceaccount.yaml
@@ -1,10 +1,10 @@
-{{ if .Values.staticSbom.enabled }}
+{{ if .Values.miggoScanner.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "k8s-integrations.serviceAccountName" . }}-static-sbom
+  name: {{ include "miggo.serviceAccountName" . }}-scanner
   labels:
-    {{- include "k8s-integrations.labels" . | nindent 4 }}
+    {{- include "miggo.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
