--- a/charts/miggo/tests/init-containers/values.yaml
+++ b/charts/miggo/tests/init-containers/values.yaml
@@ -3,13 +3,13 @@ miggo:
   projectId: "8f74294c-c769-4746-b1f3-cc20eecf0149"
   clusterName: "simple-test"
 
-k8sRead:
+miggoWatch:
   enabled: false
 
-staticSbom:
+miggoScanner:
   enabled: false
 
-sensor:
+miggoRuntime:
   enabled: false
 
 collector:
