--- a/charts/miggo/tests/local-images/values.yaml
+++ b/charts/miggo/tests/local-images/values.yaml
@@ -6,19 +6,19 @@ miggo:
 config:
   accessKey: "d6918ba5-b727-4d51-bae5-31c2a8ba59cb98944bab-d97a-4e3a-9b22-dae633070ba9"
 
-k8sRead:
+miggoWatch:
   enabled: true
   image:
     fullPath: my-custom-miggo-watch
     pullPolicy: Never
 
-staticSbom:
+miggoScanner:
   enabled: true
   image:
     fullPath: my-custom-sbom:latest
     pullPolicy: Never
 
-sensor:
+miggoRuntime:
   enabled: true
   image:
     fullPath: my-custom-k8s-sensor
