--- a/charts/miggo/tests/runtime-profiler/test.yaml
+++ b/charts/miggo/tests/runtime-profiler/test.yaml
@@ -7,7 +7,7 @@ release:
 templates:
   - templates/collector/deployment.yaml
   - templates/collector/collector-config-cm.yaml
-  - templates/sensor/daemonset.yaml
+  - templates/miggo-runtime/daemonset.yaml
 
 values:
   - values.yaml
@@ -44,13 +44,13 @@ tests:
               +receivers: \[otlp\]
               +exporters: \[otlphttp/profiles\].*
 
-  - it: should add both miggo-sensor and profiler containers to the DaemonSet spec
-    template: templates/sensor/daemonset.yaml
+  - it: should add both miggo-runtime and profiler containers to the DaemonSet spec
+    template: templates/miggo-runtime/daemonset.yaml
     asserts:
       - isKind:
           of: DaemonSet
       - equal:
-          path: spec.template.spec.containers[?(@.name == "miggo-sensor")].args
+          path: spec.template.spec.containers[?(@.name == "miggo-runtime")].args
           value:
             - --cluster-name=simple-test
             - --tenant-name=1b4a61e8-cdc8-4174-87bf-8201406ee65e
@@ -65,11 +65,11 @@ tests:
             - --metric-interval=60s
             - --disable-profiler=false
       - equal:
-          path: spec.template.spec.containers[?(@.name == "miggo-sensor")].securityContext
+          path: spec.template.spec.containers[?(@.name == "miggo-runtime")].securityContext
           value:
             privileged: true
       - equal:
-          path: spec.template.spec.containers[?(@.name == "miggo-sensor")].volumeMounts
+          path: spec.template.spec.containers[?(@.name == "miggo-runtime")].volumeMounts
           value:
             - name: debugfs
               mountPath: /sys/kernel/debug
@@ -131,9 +131,9 @@ tests:
           path: spec.template.spec.hostIPC
           value: true
   - it: should enable Off-CPU profiler
-    template: templates/sensor/daemonset.yaml
+    template: templates/miggo-runtime/daemonset.yaml
     set:
-      sensor:
+      miggoRuntime:
         profiler:
           offCpuThreshold: 1
           probabilisticThreshold: 1
