--- a/charts/miggo/tests/runtime-profiler/values.yaml
+++ b/charts/miggo/tests/runtime-profiler/values.yaml
@@ -6,13 +6,13 @@ miggo:
 config:
   accessKey: "d6918ba5-b727-4d51-bae5-31c2a8ba59cb98944bab-d97a-4e3a-9b22-dae633070ba9"
 
-k8sRead:
+miggoWatch:
   enabled: false
 
-staticSbom:
+miggoScanner:
   enabled: false
 
-sensor:
+miggoRuntime:
   enabled: true
   profiler:
     enabled: true
