--- a/charts/miggo/tests/envs/values.yaml
+++ b/charts/miggo/tests/envs/values.yaml
@@ -57,7 +57,7 @@ miggoRuntime:
   profiler:
     enabled: false
 
-collector:
+miggoCollector:
   enabled: true
   extraEnvs:
     - name: component
