--- a/charts/miggo/tests/init-containers/values.yaml
+++ b/charts/miggo/tests/init-containers/values.yaml
@@ -12,7 +12,7 @@ miggoScanner:
 miggoRuntime:
   enabled: false
 
-collector:
+miggoCollector:
   enabled: true
   initContainers:
     - name: init-access-key
