--- a/charts/miggo/tests/runtime-profiler/test.yaml
+++ b/charts/miggo/tests/runtime-profiler/test.yaml
@@ -5,8 +5,8 @@ release:
   namespace: miggo-space
 
 templates:
-  - templates/collector/deployment.yaml
-  - templates/collector/collector-config-cm.yaml
+  - templates/miggo-collector/deployment.yaml
+  - templates/miggo-collector/collector-config-cm.yaml
   - templates/miggo-runtime/daemonset.yaml
 
 values:
@@ -14,7 +14,7 @@ values:
 
 tests:
   - it: should configure collector to enable profiles signal
-    template: templates/collector/deployment.yaml
+    template: templates/miggo-collector/deployment.yaml
     asserts:
       - isKind:
           of: Deployment
@@ -26,7 +26,7 @@ tests:
             - --feature-gates
             - service.profilesSupport
   - it: should configure collector to receive and export profiles
-    template: templates/collector/collector-config-cm.yaml
+    template: templates/miggo-collector/collector-config-cm.yaml
     asserts:
       - isKind:
           of: ConfigMap
@@ -78,7 +78,7 @@ tests:
               mountPath: /tmp/grpc
       - matchRegex:
           path: spec.template.spec.containers[?(@.name == "profiler")].image
-          pattern: "registry.miggo.io/miggoprod/miggo-profiler:.*"
+          pattern: "registry.miggo.io/miggo/miggo-profiler:.*"
       - equal:
           path: spec.template.spec.containers[?(@.name == "profiler")].command
           value:
