--- a/charts/miggo/tests/simple/test.yaml
+++ b/charts/miggo/tests/simple/test.yaml
@@ -8,8 +8,8 @@ templates:
   - templates/miggo-watch/deployment.yaml
   - templates/miggo-scanner/deployment.yaml
   - templates/miggo-runtime/daemonset.yaml
-  - templates/collector/deployment.yaml
-  - templates/collector/collector-config-cm.yaml
+  - templates/miggo-collector/deployment.yaml
+  - templates/miggo-collector/collector-config-cm.yaml
   - templates/image-pull-secret.yaml
 
 values:
@@ -23,7 +23,7 @@ tests:
           of: Secret
     
   - it: collector deployment
-    template: templates/collector/deployment.yaml
+    template: templates/miggo-collector/deployment.yaml
     asserts:
       - isKind:
           of: Deployment
@@ -35,7 +35,7 @@ tests:
           value: miggo-collector
       - matchRegex:
           path: spec.template.spec.containers[?(@.name == "miggo-collector")].image
-          pattern: registry.miggo.io/miggoprod/miggo-infra-agent:.*
+          pattern: registry.miggo.io/miggo/miggo-collector:.*
       - contains:
           path: spec.template.spec.imagePullSecrets
           content:
@@ -51,13 +51,13 @@ tests:
           of: Deployment
       - equal:
           path: metadata.name
-          value: miggo-miggo-watch
+          value: miggo-watch
       - equal:
           path: spec.template.spec.serviceAccountName
-          value: miggo-miggo-watch
+          value: miggo-watch
       - matchRegex:
           path: spec.template.spec.containers[?(@.name == "miggo-watch")].image
-          pattern: registry.miggo.io/miggoprod/miggo-watch:.*
+          pattern: registry.miggo.io/miggo/miggo-watch:.*
       - contains:
           path: spec.template.spec.imagePullSecrets
           content:
@@ -73,13 +73,13 @@ tests:
           of: Deployment
       - equal:
           path: metadata.name
-          value: miggo-miggo-scanner
+          value: miggo-scanner
       - equal:
           path: spec.template.spec.serviceAccountName
-          value: miggo-miggo-scanner
+          value: miggo-scanner
       - matchRegex:
           path: spec.template.spec.containers[?(@.name == "miggo-scanner")].image
-          pattern: registry.miggo.io/miggoprod/miggo-scanner:.*
+          pattern: registry.miggo.io/miggo/miggo-scanner:.*
       - contains:
           path: spec.template.spec.imagePullSecrets
           content:
@@ -95,13 +95,13 @@ tests:
           of: DaemonSet
       - equal:
           path: metadata.name
-          value: miggo-sensor
+          value: miggo-runtime
       - equal:
           path: spec.template.spec.serviceAccountName
-          value: miggo-sensor
+          value: miggo-runtime
       - matchRegex:
           path: spec.template.spec.containers[?(@.name == "miggo-runtime")].image
-          pattern: registry.miggo.io/miggoprod/miggo-runtime:.*
+          pattern: registry.miggo.io/miggo/miggo-runtime:.*
       - contains:
           path: spec.template.spec.imagePullSecrets
           content:
