--- a/.github/workflows/update-miggo-app-version.yaml
+++ b/.github/workflows/update-miggo-app-version.yaml
@@ -37,6 +37,7 @@ jobs:
           show-progress: false
           fetch-depth: 0
           token: "${{ steps.generate-token.outputs.token }}"
+          ref: feature/MIG-5034/change-the-names-of-sensors # for testing
 
       - name: Configure Git
         run: |
