initial api support (#106)
* initial api support

* [AUTO GITHUB] Chart README.md

* [AUTO GITHUB] Bump chart versions

* comment new props

* [AUTO GITHUB] Chart README.md

---------

Co-authored-by: dvdlevanon-miggo <174447273+dvdlevanon-miggo@users.noreply.github.com>

--- a/charts/miggo/values.yaml
+++ b/charts/miggo/values.yaml
@@ -61,6 +61,12 @@ output:
     otlpEndpoint: "https://api.miggo.io"
     # -- Skip TLS verification
     tlsSkipVerify: false
+  
+  api:
+    # -- Decide whether to communicate with Miggo Api
+    enabled: true
+    # -- Miggo Api endpoint (defaults to otlp endpoint)
+    apiEndpoint: ""
 
 serviceAccount:
   # -- Automatically mount API credentials for the service account
